2010-06-23  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Add a plug-in info cache to WebPlatformStrategies
        https://bugs.webkit.org/show_bug.cgi?id=41087

        This is in preparation for proxying the getPlugins call over to the UI process.

        * WebProcess/WebCoreSupport/WebPlatformStrategies.cpp:
        (WebKit::WebPlatformStrategies::WebPlatformStrategies):
        (WebKit::WebPlatformStrategies::populatePluginCache):
        (WebKit::WebPlatformStrategies::refreshPlugins):
        (WebKit::WebPlatformStrategies::getPluginInfo):
        * WebProcess/WebCoreSupport/WebPlatformStrategies.h:

2010-06-23  Sam Weinig  <sam@webkit.org>

        Reviewed by John Sullivan.

        Stop silently ignoring crashes.

        * WebProcess/Launching/mac/WebProcessMain.mm:

2010-06-23  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Add missing include to WKRetainPtr.

        * UIProcess/API/cpp/WKRetainPtr.h:

2010-06-23  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=41073
        WebKit2: Flesh out more of the InjectedBundle client API

        * WebProcess/InjectedBundle/API/c/WKBundle.h:
        * WebProcess/InjectedBundle/API/c/WKBundlePage.h:
        * WebProcess/InjectedBundle/InjectedBundle.cpp:
        (WebKit::InjectedBundle::willDestroyPage):
        * WebProcess/InjectedBundle/InjectedBundle.h:
        * WebProcess/InjectedBundle/InjectedBundlePageClient.cpp:
        (WebKit::InjectedBundlePageClient::didStartProvisionalLoadForFrame):
        (WebKit::InjectedBundlePageClient::didReceiveServerRedirectForProvisionalLoadForFrame):
        (WebKit::InjectedBundlePageClient::didFailProvisionalLoadWithErrorForFrame):
        (WebKit::InjectedBundlePageClient::didCommitLoadForFrame):
        (WebKit::InjectedBundlePageClient::didFinishLoadForFrame):